# SimpleGUI

./: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
lib/: CMakeLists.txt
